# scrapy-html

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
scrapy_html/: __init__.py  scraper.py  validators.py
scrapy_html.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_scraper.py  test_validators.py
